<resources>
    <string name="app_name">Ringly</string>
    <string name="ringly_love">Ringly Loves You</string>
    <string name="icon_description">icon</string>
    <string name="horizontal_rule_description">horizontal rule</string>
    <string name="checkbox_description">checkbox</string>
    <string name="delete_description">delete</string>
    <string name="show_screens_description">menu button</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
    <string name="clear">Clear</string>
    <string name="tap_for_ring_update">TAP FOR DEVICE UPDATE</string>
    <string name="welcome_to">Welcome To</string>
    <string name="ring_and_phone_description">ring and phone</string>
    <string name="lets_get_started">Let’s get started!</string>
    <string name="connect">Connect</string>
    <string name="searching">Searching…</string>
    <string name="no_rings_found">No Ringly jewelry found!</string>
    <string name="check_mark_description">check mark</string>
    <string name="notification_access">Notification Access</string>
    <string name="notification_access_description">To receive notifications on your ring, please enable Ringly’s access to your phone’s notifications, see when you’re getting a phone call, and read SMS messages. When you’re done, press the back button to return to the Ringly app.</string>
    <string name="permissions_denied">Without these permissions, you won’t be able to receive notifications on your ring.</string>
    <string name="location_denied">Android requires the location permission in order to scan for and connect to bluetooth devices.</string>
    <string name="enable">Enable</string>
    <string name="location_needs_enabling">Please set Location to “on”. This is required by Android to scan for and connect to bluetooth devices.</string>
    <string name="rings_label">We found a few devices close by</string>
    <string name="rings_description">Look at the last 4 characters on the box’s bar code to find yours.</string>
    <string name="connection_title"></string>
    <string name="connection">Connection</string>
    <string name="ring_photo_description">ring photo</string>
    <string name="connected">Connected</string>
    <string name="not_connected">Connecting</string>
    <string name="not_charging">Ringly Battery</string>
    <string name="charging">Charging</string>
    <string name="charged">Charged</string>
    <string name="battery_level_description">battery level</string>
    <string name="daybreak">Daybreak</string>
    <string name="daydream">Daydream</string>
    <string name="disrupt">Disrupt</string>
    <string name="dive_bar">Dive Bar</string>
    <string name="into_the_woods">Into the Woods</string>
    <string name="opening_night">Opening Night</string>
    <string name="out_to_sea">Out to Sea</string>
    <string name="stargaze">Stargaze</string>
    <string name="wanderlust">Wanderlust</string>
    <string name="wine_bar">Wine Bar</string>
    <string name="first_date">First Date</string>
    <string name="after_hours">After Hours</string>
    <string name="full_moon">Full Moon</string>
    <string name="high_tide">High Tide</string>
    <string name="backstage">Backstage</string>
    <string name="boardwalk">Boardwalk</string>
    <string name="photobooth">Photo Booth</string>
    <string name="rendezvous">Rendezvous</string>
    <string name="roadtrip">Road Trip</string>
    <string name="lakeside">Lakeside</string>
    <string name="ringly_go">Ringly GO</string>
    <string name="rose">Rosé All Day</string>
    <string name="jet_set">Jet Set</string>
    <string name="joy_ride">Joy Ride</string>
    <string name="bon_voyage">Bon Voyage</string>
    <string name="ringly_love_type">Happy Valentine\'s Day!!</string>
    <string name="ringly_love_connection">xo</string>
    <string name="notifications_title">Alerts</string>
    <string name="notifications">Alerts</string>
    <string name="phone_call">Phone Call</string>
    <string name="text_message">Text Message</string>
    <string name="email">Email</string>
    <string name="android_email">Android Email</string>
    <string name="calendar">Calendar</string>
    <string name="accuweather">AccuWeather</string>
    <string name="airbnb">Airbnb</string>
    <string name="allo">Allo</string>
    <string name="amazon_alexa">Amazon Alexa</string>
    <string name="american_airlines">American Airlines</string>
    <string name="anydo">Any.do</string>
    <string name="ap">AP</string>
    <string name="arlo">Arlo</string>
    <string name="asana">Asana</string>
    <string name="avocado">Avocado</string>
    <string name="basecamp3">Basecamp 3</string>
    <string name="bbm">BBM</string>
    <string name="between">Between</string>
    <string name="birchbox">Birchbox</string>
    <string name="buffer">Buffer</string>
    <string name="bumble">Bumble</string>
    <string name="bsafe">bSafe</string>
    <string name="chomp">chompSMS</string>
    <string name="classdojo">ClassDojo</string>
    <string name="cleverloop">CleverLoop</string>
    <string name="clue">Clue</string>
    <string name="coachella">Coachella</string>
    <string name="couple">Couple</string>
    <string name="covet">Covet Fashion</string>
    <string name="cozi">Cozi</string>
    <string name="dexcom_follow">Dexcom Follow</string>
    <string name="doc_halo">Doc Halo</string>
    <string name="docusign">DocuSign</string>
    <string name="dropcam">Dropcam</string>
    <string name="ebay">eBay</string>
    <string name="endomondo">Endomondo</string>
    <string name="espn">ESPN</string>
    <string name="etsy">Etsy</string>
    <string name="evernote">Evernote</string>
    <string name="facebook">Facebook</string>
    <string name="facebook_messenger">Facebook Messenger</string>
    <string name="facebook_pma">Facebook Pages Manager</string>
    <string name="fitbit">Fitbit</string>
    <string name="fly_delta">Fly Delta</string>
    <string name="flywheel">Flywheel</string>
    <string name="fox_news">Fox News</string>
    <string name="gilt">Gilt</string>
    <string name="glide">Glide</string>
    <string name="glip">Glip</string>
    <string name="glooko">Glooko</string>
    <string name="glow">Glow</string>
    <string name="gmail">Gmail</string>
    <string name="good">Good</string>
    <string name="goodreads">Goodreads</string>
    <string name="google_duo">Google Duo</string>
    <string name="google_express">Google Express</string>
    <string name="google_fit">Google Fit</string>
    <string name="google_keep">Google Keep</string>
    <string name="google_maps">Google Maps</string>
    <string name="google_now">Google Now</string>
    <string name="google_voice">Google Voice</string>
    <string name="groupme">GroupMe</string>
    <string name="grubhub">GrubHub</string>
    <string name="hangouts">Hangouts</string>
    <string name="happn">happn</string>
    <string name="headspace">Headspace</string>
    <string name="hidrate">Hidrate</string>
    <string name="hinge">Hinge</string>
    <string name="hipchat">HipChat</string>
    <string name="homeboy">Homeboy</string>
    <string name="hooks">Hooks</string>
    <string name="hootsuite">Hootsuite</string>
    <string name="ifttt">IFTTT</string>
    <string name="inbox">Inbox</string>
    <string name="instacart">Instacart</string>
    <string name="instagram">Instagram</string>
    <string name="jetblue">JetBlue</string>
    <string name="kakaotalk">KakaoTalk</string>
    <string name="kik">Kik</string>
    <string name="la_times">LA Times</string>
    <string name="letgo">letgo</string>
    <string name="life360">Life360</string>
    <string name="line">Line</string>
    <string name="linkedin">LinkedIn</string>
    <string name="lose_it">Lose It</string>
    <string name="lyft">Lyft</string>
    <string name="maple">Maple</string>
    <string name="mapmydogwalk">MapMyDogWalk</string>
    <string name="mapmyfitness">MapMyFitness</string>
    <string name="mapmyhike">MapMyHike</string>
    <string name="mapmyride">MapMyRide</string>
    <string name="mapmyrun">MapMyRun</string>
    <string name="mapmywalk">MapMyWalk</string>
    <string name="medisafe">Medisafe</string>
    <string name="mercari">Mercari</string>
    <string name="microsoft_outlook">Microsoft Outlook</string>
    <string name="mint">Mint</string>
    <string name="mobileiron">Mobile@Work</string>
    <string name="my_bright_day">My Bright Day</string>
    <string name="myfitnesspal">MyFitnessPal</string>
    <string name="myidealdoctor">MYidealDOCTOR</string>
    <string name="mypill">myPill</string>
    <string name="mypillbox">My PillBox</string>
    <string name="myzone">MYZONE</string>
    <string name="nbc_sports">NBC Sports</string>
    <string name="nest">Nest</string>
    <string name="net_a_porter">NET-A-PORTER</string>
    <string name="nine">Nine</string>
    <string name="ntouch">ntouch</string>
    <string name="nytimes">NY Times</string>
    <string name="offerup">OfferUp</string>
    <string name="contacts">Contacts</string>
    <string name="preferences">Settings</string>
    <string name="connection_light">Connection Taps</string>
    <string name="connection_light_description">Tap your Ringly twice. Blue indicates connected, pink indicates disconnected.</string>
    <string name="disconnection_buzz">Out Of Range</string>
    <string name="disconnection_buzz_description">Buzz your Ringly when your phone goes out of range.</string>
    <string name="sleep_mode">Sleep Mode</string>
    <string name="sleep_mode_description">Save power when your Ringly is not moving.</string>
    <string name="prefs_help">Help</string>
    <string name="disconnect">Disconnect</string>
    <string name="signout">Sign out</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="goal_title">Steps Goal</string>
    <string name="birthday">Birthday</string>
    <string name="connection_light_key">connectionTaps</string>
    <string name="disconnection_buzz_key">disconnectionBuzz</string>
    <string name="sleep_mode_key">sleepMode</string>
    <string name="ring_key">ring</string>
    <string name="mindful_minutes_goal_key">mindful_minutes_goal</string>
    <string name="were_making_ringly_better">Let’s Make Your Ringly Even Better!</string>
    <string name="update_your_ring_for">Update Your Device For</string>
    <string name="dfu_improvements">• Improved Connection\n• Longer Battery Life\n• Easier Future Updates</string>
    <string name="ring_outline_description">ring outline</string>
    <string name="get_started">Get Started</string>
    <string name="remind_me_later">"R E M I N D   M E   L A T E R"</string>
    <string name="important">Important!</string>
    <string name="dfu_charger_description">Please start charging your device, and do not remove it until the update process is complete. Thanks!</string>
    <string name="charging_box_description">charging box</string>
    <string name="lets_go">Let’s Go!</string>
    <string name="youre_done">You Did It!</string>
    <string name="dfu_done_description">Your Ringly Has Been Successfully Updated.\nTime To Celebrate!</string>
    <string name="finish">Finish</string>
    <string name="oh_no_the_update_hit_a_snag">Oh No, The Update Hit A Snag</string>
    <string name="dfu_failed_description">Please try again, or contact us at support@ringly.com</string>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="create_user">Sign up</string>
    <string name="email_label">Email</string>
    <string name="login">Login</string>
    <string name="password_label">Password</string>
    <string name="switch_to_signup">New to Ringly? <u>Sign Up</u></string>
    <string name="forgot_password">Forgot password</string>
    <string name="activity">Activity</string>
    <string name="mindfulness">Mindfulness</string>
    <string name="mindful_minutes_goal">Mindful Minutes Goal</string>
</resources>