<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:background="@drawable/gradient_blue_green"
    >
    <TextView
        style="@style/DfuHeader"
        android:text="@string/were_making_ringly_better"
        />
    <TextView
        android:textSize="@dimen/label_text"
        android:text="@string/update_your_ring_for"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TextView
        android:textSize="@dimen/small_label_text"
        android:text="@string/dfu_improvements"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_space"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="@dimen/medium_space"
        android:src="@drawable/ring_outline_medium"
        android:contentDescription="@string/ring_outline_description"
        />
    <Button
        android:id="@+id/proceed"
        android:text="@string/get_started"
        android:textSize="@dimen/heading_text"
        style="@style/Button"
        />
    <TextView
        android:id="@+id/cancel"
        android:textSize="@dimen/body_text"
        android:text="@string/remind_me_later"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/large_space"
        />
</LinearLayout>
