<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:gravity="center"
    xmlns:tools="http://schemas.android.com/tools"
    tools:background="@drawable/gradient_red_purple"
    >
    <TextView
        android:textSize="@dimen/heading_text"
        android:text="@string/welcome_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/medium_space"
        />
    <TextView
        android:id="@+id/ringly_main"
        android:text="@string/app_name"
        android:textSize="@dimen/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/medium_space"
        />
    <ImageView
        android:src="@drawable/ring_and_phone"
        android:contentDescription="@string/ring_and_phone_description"
        android:adjustViewBounds="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/bottom_bar"
        android:padding="@dimen/header_padding"
        >
        <TextView
            android:textSize="@dimen/label_text"
            android:text="@string/lets_get_started"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium_space"
            />
        <Button
            android:id="@+id/proceed"
            android:text="@string/connect"
            style="@style/Button"
            />
    </LinearLayout>
</LinearLayout>
