<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:background="@drawable/gradient_blue_green"
    >
    <TextView
        style="@style/DfuHeader"
        android:text="@string/youre_done"
        android:background="@drawable/underline"
        />
    <TextView
        android:textSize="@dimen/label_text"
        android:text="@string/dfu_done_description"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/medium_space"
        android:layout_marginRight="@dimen/medium_space"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="@dimen/medium_space"
        android:src="@drawable/ring_glossy"
        android:contentDescription="@string/ring_outline_description"
        />
    <Button
        android:id="@+id/proceed"
        android:text="@string/finish"
        android:textSize="@dimen/heading_text"
        android:layout_marginBottom="@dimen/large_space"
        style="@style/Button"
        />
</LinearLayout>
