<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    xmlns:tools="http://schemas.android.com/tools"
    tools:background="@drawable/gradient_red_purple"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        >
        <TextView
            android:textSize="@dimen/heading_text"
            android:text="@string/welcome_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium_space"
            />
        <TextView
            android:id="@+id/ringly_main"
            android:text="@string/app_name"
            android:textSize="@dimen/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/header_padding"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/bottom_bar"
        android:padding="@dimen/header_padding"
        >
        <ImageView
            android:src="@drawable/check"
            android:contentDescription="@string/check_mark_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/header_padding"
            />
        <TextView
            android:textSize="@dimen/label_text"
            android:text="@string/notification_access"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium_space"
            />
        <TextView
            android:textAllCaps="false"
            android:textSize="@dimen/body_text"
            android:gravity="center"
            android:text="@string/notification_access_description"
            android:layout_width="@dimen/text_width"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/header_padding"
            />
        <Button
            android:id="@+id/proceed"
            android:text="@string/enable"
            style="@style/Button"
            />
    </LinearLayout>
</LinearLayout>
