<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:background="@drawable/gradient_blue_green"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/oh_no_the_update_hit_a_snag"
        android:textSize="@dimen/heading_text"
        android:gravity="center"
        android:layout_marginTop="@dimen/header_padding"
        android:layout_marginLeft="@dimen/large_space"
        android:layout_marginRight="@dimen/large_space"
        />
    <TextView
        android:textSize="@dimen/body_text"
        android:text="@string/dfu_failed_description"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/large_space"
        />
    <ImageView
        android:contentDescription="@string/horizontal_rule_description"
        android:src="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_width"
        />
    <TextView
        android:id="@+id/proceed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close"
        android:textSize="@dimen/heading_text"
        android:layout_margin="@dimen/large_space"
        />
</LinearLayout>
