<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:background="@drawable/gradient_blue_green"
    >
    <TextView
        style="@style/DfuHeader"
        android:text="@string/important"
        android:background="@drawable/underline"
        />
    <TextView
        android:textSize="@dimen/label_text"
        android:text="@string/dfu_charger_description"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/medium_space"
        android:layout_marginRight="@dimen/medium_space"
        />
    <ImageView
        android:id="@+id/ring_box"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="@dimen/medium_space"
        android:src="@drawable/ring_into_box"
        android:contentDescription="@string/charging_box_description"
        />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <Button
            android:id="@+id/proceed"
            android:layout_gravity="center"
            android:visibility="invisible"
            android:text="@string/lets_go"
            android:textSize="@dimen/heading_text"
            style="@style/Button"
            tools:visibility="visible"
            />
        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="invisible"
            tools:visibility="visible"
            />
    </FrameLayout>
    <TextView
        android:id="@+id/cancel"
        android:textSize="@dimen/body_text"
        android:text="@string/remind_me_later"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/large_space"
        />
</LinearLayout>
