<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/large_space"
    android:padding="@dimen/header_padding"
    android:gravity="center"
    xmlns:tools="http://schemas.android.com/tools"
    tools:background="@drawable/gradient_red_purple"
    >
    <TextView
        android:id="@+id/ringly_main"
        android:text="@string/app_name"
        android:textSize="@dimen/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/large_space"
        />
    <TextView
        android:textSize="@dimen/label_text"
        android:text="@string/rings_label"
        android:layout_width="@dimen/text_width"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/medium_space"
        android:gravity="center"
        />
    <TextView
        android:textAllCaps="false"
        android:textSize="@dimen/body_text"
        android:gravity="center"
        android:text="@string/rings_description"
        android:layout_width="@dimen/text_width"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/medium_space"
        />
    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/border"
        android:divider="@android:color/white"
        android:dividerHeight="@dimen/divider_width"
        tools:listitem="@layout/listitem_rings"
        />
</LinearLayout>
